# A2Dev

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README_A2Dev.md  RELEASE.md  SECURITY.md  a2a_cli.py  a2dev_cli.py  package.json  pyproject.toml
.a2dev/: state.json
.a2dev/codex/: system-prompt.txt
.a2dev/hooks/: pre-commit.sample
.a2dev/policies/: A11Y.md  Architecture.md  CodeReview.md  CodingStandards.md  DoD.md  DoR.md  INVEST.md  LLM-Rules.md  SecureCoding.md  Security.md
.a2dev/semgrep/: rules.yml
.a2dev/templates/: backlog.json  prd.md  story.md
.github/: RELEASE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: publish-checklist.md
.github/workflows/: ci.yml  release.yml
a2a/: __init__.py  board.py  cli.py  gate.py  inventory.py  journal.py  llm.py  mcp.py  models.py  orchestrator.py  personas.py  phases.py  pm.py  quality.py  router.py  schema.py  shard.py  sprints.py  status.py  storage.py  trace.py
a2a/roles/: __init__.py  analyst.py  architecture.py  data.py  devops.py  eng.py  planning.py  qa.py  security.py  typing.py  ux.py
docs/: PRD.md  PRD_DEMO.md  backlog.json  epics.md
docs/analyst/: assumptions.md  brief.md  brownfield-assessment.md  brownfield-inventory.json  brownfield-inventory.md  competitors.md  links.md  quality-audit.md  questions.md  research.md  stakeholders.md  success-metrics.md  viability.md
docs/integrations/: Codex.md
examples/: codex-tools.ts  harness.ts
scripts/: build_pyz.py  install_a2dev.py  postinstall.js  startup.sh
tools/: codex_router_example.py
(+25 files in other folders)
